<resources>
    <string name="app_name">Spread&amp;Connect</string>
    <string name="login">Iniciar Sessió</string>
    <string name="registre">Registre</string>
    <string name="registrat">Registra\'t</string>
    <string name="nom_usuari">Nom d\'usuari</string>
    <string name="email">Correu electrònic</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="contrasenya_antiga">Contrasenya Antiga</string>
    <string name="contrasenya_nova">Contrasenya Nova</string>
    <string name="confirmar_contrasenya">Confirmar Contrasenya</string>
    <string name="guardar">Desar</string>
    <string name="cancelar">Cancel·lar</string>
    <string name="crear_post">Crear Post</string>
    <string name="editar_post">Editar Post</string>
    <string name="eliminar_post">Eliminar Post</string>
    <string name="titol">Títol</string>
    <string name="descripcio">Descripció</string>
    <string name="contingut">Contingut</string>
    <string name="area">Àrea</string>
    <string name="crear_presentacio">Crear Presentació</string>
    <string name="editar_presentacio">Editar Presentació</string>
    <string name="eliminar_presentacio">Eliminar Presentació</string>
    <string name="perfil">Perfil</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="configuracio">Configuració</string>
    <string name="idioma">Idioma</string>
    <string name="tema">Tema</string>
    <string name="clar">Clar</string>
    <string name="fosc">Fosc</string>
    <string name="cercar">Cercar</string>
    <string name="areas_interessos">Àrees d\'Interès</string>
    <string name="veure_posts">Veure Posts</string>
    <string name="veure_presentacions">Veure Presentacions</string>
    <string name="canviar_avatar">Canviar Avatar</string>
    <string name="post_creat">Post creat correctament</string>
    <string name="post_actualitzat">Post actualitzat correctament</string>
    <string name="post_eliminat">Post eliminat correctament</string>
    <string name="presentacio_creada">Presentació creada correctament</string>
    <string name="presentacio_actualitzada">Presentació actualitzada correctament</string>
    <string name="presentacio_eliminada">Presentació eliminada correctament</string>
    <string name="perfil_actualitzat">Perfil actualitzat correctament</string>
    <string name="error">Error</string>
    <string name="carregant">Carregant...</string>
    <string name="sense_dades">Sense dades</string>
    <string name="perfil_usuari">Perfil Usuari</string>
    <string name="tancar_sessio">Tancar Sessió</string>
    <string name="posts">Posts</string>
    <string name="presentacions">Presentacions</string>
    <string name="omple_tots_camps">Omple tots els camps</string>
    <string name="usuari">Usuari</string>
    <string name="usuari_creat_correctament">Usuari creat correctament!</string>
    <string name="selecciona_area">Selecciona una àrea</string>
    <string name="oblidat_contrasenya">Heu oblidat la contrasenya?</string>
    <string name="notificacions">Notificacions</string>
    <string name="notificacions_permis_configuracio">Per activar les notificacions, has d\'anar a la configuració de l\'aplicació i concedir el permís manualment.</string>
    <string name="anar_a_configuracio">Anar a Configuració</string>
    <string name="idioma_catala">Catala</string>
    <string name="idioma_castella">Castellà</string>
    <string name="idioma_angles">Anglès</string>
    <string name="tema_clar">Clar</string>
    <string name="tema_fosc">Fosc</string>
    <string name="filtrar_usuari">Filtrar per usuari</string>
    <string name="filtrar_data">Filtrar per data</string>
    <string name="enviar_email">Enviar correu</string>
    <string name="otp_codigo">Codi</string>
    <string name="verify_code">Verificar i canviar</string>
    <string name="editar_comentari">Editar comentari</string>
    <string name="esborrar_comentari">Esborrar comentari</string>
    <string name="confirma_esborrar_comentari">Estàs segur que vols esborrar aquest comentari?</string>
    <string name="email_no_valid">Email no vàlid</string>
    <string name="contrasenyes_no_conceidexen">No concideixen les contrasenyes</string>
    <string name="contrasenya_curta">La contrasenya ha de tenir 8 caràcters com a mínim</string>
    <string name="usuari_molt_llarg">L\'usuari no pot superar els 30 càracters</string>
    <string name="contrasenya_molt_llarga">La contrasenya no pot superar els 255 càracters</string>
    <string name="etiqueta">Etiqueta</string>
    <string name="nom_obligatori">Nom obligatori</string>
    <string name="introdueix_contrasenya_antiga">Introdueix la contrasenya antiga per canviar-la</string>
    <string name="error_traduccio">Error en la traducció</string>
    <string name="error_al_carregar_usuari">Error al carregar l\'usuari</string>
    <string name="credenciales_incorrectas">Credencials incorrectes</string>
    <string name="usuari_existent">L\'usuari ja existeix</string>
    <string name="error_al_registrar">Error al registrar</string>
    <string name="usuari_no_trobat">Usuari no trobat</string>
    <string name="error_en_crear_post">Error en crear el post</string>
    <string name="error_en_editar_post">Error en editar el post</string>
    <string name="error_al_crear_presentacio">Error al crear la presentació</string>
    <string name="error_al_editar_la_presentacio">Error al editar la presentació</string>
    <string name="error_en_editar_comentari">Error en editar el comentari</string>
    <string name="error_en_actualizar_perfil">Error en actualitzar el perfil</string>
    <string name="codi_no_solicitat">Codi no sol·licitat</string>
    <string name="codi_incorrecte">Codi incorrecte</string>
    <string name="error_verificar_otp">Error en verificar el codi</string>
    <string name="error_en_crear_preferencies">Error en crear les preferències</string>
    <string name="error_actualitzar_preferencies">Error en actualitzar les preferències</string>
    <string name="error_contrasenya_antiga_incorrecta">Contrasenya antiga incorrecta</string>
    <string name="error_carregar_dades">Error al carregar les dades</string>
    <string name="introdueix_contrasenya_nova">Introdueix la contrasenya nova</string>
    <string name="correu_codi_enviat">Correu amb codi enviat, revisa el teu correu.</string>
    <string name="contrasenya_actualitzada">Contrasenya actualitzada</string>
    <string name="seguidors">Seguidors</string>
    <string name="ultims_posts">Ultims posts:</string>
    <string name="ultimes_presentacions">Ultimes presentacions:</string>
    <string name="total_posts">Total posts:</string>
    <string name="total_presentacions">Total presentacions:</string>
    <string name="sessio_no_trobada">Sessio no trobada</string>
    <string name="email_no_disponible">Email no disponible</string>
    <string name="introduir_contra_antiga">Has d\'introudir la contrasenya antigua per canviar la contrasenya.</string>
    <string name="seguint">Seguint</string>
    <string name="estadistiques">Estadistiques</string>
    <string name="comentaris">Comentaris:</string>
    <string name="ultim_post">Ultim post:</string>
    <string name="ultim_presentacio">Ultima presentacio:</string>
    <string name="postMesInteraccions">Post amb mes interaccions:</string>
    <string name="seguir">Seguir</string>
    <string name="posts_menu_item">Posts</string>
    <string name="historial_menu_item">Historial</string>
    <string name="chat_menu_item">Xat</string>
    <string name="chats_titol">Els teus xats: </string>
    <string name="no_converses">No tens converses</string>
    <string name="tipus_notificacio_post">Nou post</string>
    <string name="missatge_notificacio_post">Nou post: %1$s</string>
    <string name="sessio_tancada">Logout completado</string>
    <string name="imatge_seleccionada">Imatge seleccionada</string>
    <string name="enviar_missatge">Enviar missatge</string>
</resources>